Correccion dimensiones imagen de perfil y descripcion de profesion

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <section>
         <div class="card">
-            <picture class="card__header">
+            <figure class="card__header">
                 <img src="./assets/img/web-development.jpg" alt="Pantalla de computadora con código HTML ejemplo">
-            </picture>
-            <picture class="card__profile">
-                <img src="./assets/img/profile.jpg" alt="Foto perfil Rafael Martínez">
-            </picture>
+            </figure>
+            <figure class="card__profile">
+                <img src="./assets/img/profile2.jpg" alt="Foto perfil Rafael Martínez">
+            </figure>
             <h1 class="card__title">Rafael Martínez Rodríguez</h1>
             <div class="card__info">
                 <p class="card__info--description">FrontEnd Developer con HTML5 - CSS3</p>
